--- a/docker-compose-nginx.yml
+++ b/docker-compose-nginx.yml
@@ -1,16 +1,16 @@
 version: '3'
-
 services:
+  php:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
   nginx:
     image: nginx:latest
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx:/etc/nginx/conf.d
     depends_on:
       - php
-
-  php:
-    image: php:7.4-fpm
-    volumes:
-      - ./src:/var/www/html
