--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,13 @@
 server {
     listen 80;
-    ім'я_сервера localhost;
-    root /var/www/html;
-    index index.php index.html;
+    server_name localhost;
 
-    location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass php:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
+    location / {
+        proxy_pass http://php:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
