--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,10 +10,10 @@ server {
     }
 
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
+        include fastcgi_params;
         fastcgi_pass php-fpm:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location ~ /\.ht {
