--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,14 @@ version: '3'
 services:
   web:
     image: cheapyd/simple-php-website
+    expose:
+      - "9000"  # Expose PHP-FPM port
+
+  nginx:
+    image: nginx:latest
     ports:
       - "8080:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - web
