--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: '3'
-
 services:
-  web:
-    image: cheapyd/simple-php-website
-    expose:
-      - "9000"  # Expose PHP-FPM port
-
+  php-fpm:
+    build:
+      context: .
+    ports:
+      - "9000:9000"
   nginx:
     image: nginx:latest
     ports:
@@ -13,4 +12,4 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - web
+      - php-fpm
