--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
-version: '3'
+version: '3.8'
+
 services:
   php-fpm:
     build:
       context: .
-    ports:
-      - "9000:9000"
+    working_dir: /var/www/html
+    expose:
+      - 9001  # Use a different port, for example, 9001
+    command: ["php-fpm"]
+
   nginx:
     image: nginx:latest
     ports:
       - "8080:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./html:/var/www/html:ro
     depends_on:
       - php-fpm
