--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,12 @@
 server {
     listen 80;
     server_name localhost;
-    index index.php index.html;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    root /var/www/html;
-
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass php-fpm:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
 
     location / {
-        try_files $uri $uri/ =404;
+        proxy_pass http://php:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
