--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,17 @@
 version: '3'
 
 services:
-  php-fpm:
-    build:
-      context: .
-    working_dir: /var/www/html
-    expose:
-      - 9001
-    command: ["php-fpm"]
-
   nginx:
     image: nginx:latest
     ports:
       - "8080:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./html:/var/www/html:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - php-fpm
+      - php
+
+  php:
+    build:
+      context: .
+    expose:
+      - "8080"
