--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,26 @@
-name: Build and Test
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - main
+      - main  # Update to your main branch name
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Build and test
-      run: |
-        docker-compose up -d
-        docker-compose exec php composer install
-        docker-compose exec php vendor/bin/phpunit
-      env:
-        DB_HOST: mysql
-        DB_USER: root
-        DB_PASS: root
+      - name: Login to DockerHub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push Docker Image
+        run: |
+          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/commit-version-website"
+          COMMIT_HASH=$(echo $GITHUB_SHA | cut -c1-7)
+          IMAGE_TAG="${IMAGE_NAME}:${COMMIT_HASH}"
+
+          docker build -t $IMAGE_TAG .
+          docker push $IMAGE_TAG
